--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://OleksandrVlasenko.github.io/book-team-project-13",
+  "homepage": "https://GoitStudentsWorks.github.io/js_72_OleksandrVlasenko",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /book-team-project-13/"
+    "build": "parcel build src/*.html --public-url /js_72_OleksandrVlasenko/"
   },
   "repository": {
     "type": "git",
